--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "jose": "^5.2.2",
     "pg": "^8.11.3",
     "sequelize": "^6.37.0"
   }
