--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "express-validator": "^7.0.1",
     "jose": "^5.2.2",
     "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.0",
     "socket.io": "^4.7.4",
     "socket.io-client": "^4.7.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
